--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "nextsms/laravel",
-    "description": "",
+    "description": "Laravel Integration to NextSMS",
     "homepage": "https://github.com/nextsms/laravel",
     "license": "MIT",
     "authors": [
@@ -14,11 +14,12 @@
     "require": {
         "php": ">=7.4",
         "illuminate/notifications": "~7.0 || ~8.0",
-        "illuminate/support": "~7.0 || ~8.0"
+        "illuminate/support": "~7.0 || ~8.0",
+        "nextsms/php-client": "^0.0.2"
     },
     "require-dev": {
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^9.0"
+        "mockery/mockery": "^1.4",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
