--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [7.4, 8.0]
+        # php: [7.4, 8.0]
+        php: [8.0]
 
     name: Tests on PHP ${{ matrix.php }} - ${{ matrix.stability }}
 
