--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "illuminate/notifications": "~7.0 || ~8.0",
-        "illuminate/support": "~7.0 || ~8.0",
-        "nextsms/php-client": "dev-main"
+        "php": ">=7.2",
+        "illuminate/notifications": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/support": "~6.0 || ~7.0 || ~8.0",
+        "nextsms/php-client": ">=0.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.4",
-        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^8.0",
         "orchestra/testbench": "~5.0 || ~6.0",
         "vimeo/psalm": "^4.4"
     },
