--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": ">=7.4",
-        "illuminate/notifications": "~7.0 || ~8.0",
-        "illuminate/support": "~7.0 || ~8.0",
+        "illuminate/notifications": "~7.0 || ~8.0 || ~9.0 ",
+        "illuminate/support": "~7.0 || ~8.0 || ~9.0 ",
         "nextsms/php-client": "dev-main"
     },
     "require-dev": {
